crates/alder-parse/src/snapshots/alder_parse__query__tests__error_projection.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select from users }"
---
Query(
    Select(
        Projection(
            1,
            16,
        ),
        1,
        9,
    ),
    1,
    1,
)
