crates/alder-parse/src/snapshots/alder_parse__query__tests__error_projection_end.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select { a b } from users }"
---
Query(
    Select(
        ProjectionEnd(
            ExpectedEnd {
                opening: Position {
                    line: 1,
                    column: 16,
                },
                boundary: Position {
                    line: 1,
                    column: 19,
                },
                unexpected: Position {
                    line: 1,
                    column: 20,
                },
            },
        ),
        1,
        9,
    ),
    1,
    1,
)
