crates/alder-parse/src/snapshots/alder_parse__query__tests__error_projection_expr.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select { } from users }"
---
Query(
    Select(
        ProjectionExpr(
            Start(
                1,
                18,
            ),
            1,
            18,
        ),
        1,
        9,
    ),
    1,
    1,
)
