crates/alder-parse/src/snapshots/alder_parse__query__tests__error_sql_keyword_after_nested_pin.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users where users.id in ^(query { select { id } from admins }) && limit > 1 }"
---
Query(
    Select(
        Where(
            SqlKeyword(
                Limit,
                1,
                89,
            ),
            1,
            35,
        ),
        1,
        9,
    ),
    1,
    1,
)
