crates/alder-parse/src/snapshots/alder_parse__query__tests__error_sql_keyword_as_operand.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users where limit > 3 }"
---
Query(
    Select(
        Where(
            SqlKeyword(
                Limit,
                1,
                35,
            ),
            1,
            35,
        ),
        1,
        9,
    ),
    1,
    1,
)
