crates/alder-parse/src/snapshots/alder_parse__query__tests__error_table_name.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from Users }"
---
Query(
    Select(
        Table(
            Name(
                1,
                23,
            ),
            1,
            23,
        ),
        1,
        9,
    ),
    1,
    1,
)
