crates/alder-parse/src/snapshots/alder_parse__query__tests__error_table_name_sql_word.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from limit }"
---
Query(
    Select(
        Table(
            Name(
                1,
                23,
            ),
            1,
            23,
        ),
        1,
        9,
    ),
    1,
    1,
)
