crates/alder-parse/src/snapshots/alder_parse__query__tests__error_unclosed.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users"
---
Query(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 7,
            },
            boundary: Position {
                line: 1,
                column: 28,
            },
            unexpected: Position {
                line: 1,
                column: 28,
            },
        },
    ),
    1,
    1,
)
