crates/alder-parse/src/snapshots/alder_parse__query__tests__error_update_record.snap
---
source: crates/alder-parse/src/query.rs
description: "query { update users set { name = ^n } }"
---
Query(
    Update(
        Record(
            EqualsNotColon(
                1,
                33,
            ),
            1,
            27,
        ),
        1,
        9,
    ),
    1,
    1,
)
