crates/alder-parse/src/snapshots/alder_parse__query__tests__error_update_record_open.snap
---
source: crates/alder-parse/src/query.rs
description: "query { update users set name: ^n }"
---
Query(
    Update(
        RecordOpen(
            1,
            26,
        ),
        1,
        9,
    ),
    1,
    1,
)
