crates/alder-parse/src/snapshots/alder_parse__query__tests__error_update_set.snap
---
source: crates/alder-parse/src/query.rs
description: "query { update users { name: ^n } }"
---
Query(
    Update(
        Set(
            1,
            22,
        ),
        1,
        9,
    ),
    1,
    1,
)
